--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,17 @@
 
-	<a href="{{site.github.url}}/"><h3 class="link">Home</h3></a>
-	<a href="{{site.github.url}}/about.html"><h3 class="link">About Me</h3></a>
-	<a href="{{site.github.url}}/research.html"><h3 class="link">Research</h3></a>
-	<a href="{{site.github.url}}/publications.html"><h3 class="link">Publications</h3></a>
-	<a href="{{site.github.url}}/contact.html"><h3 class="link">Contact</h3></a>
+<nav class="site-nav">
 
+<div class="navlink-left">
+<div class="navlink"><a href="{{site.github.url}}/" class="site-nav">Home</a></div>
+<div class="navlink"><a href="{{site.github.url}}/about.html" class="site-nav">About Me</a></div>
+<div class="navlink"><a href="{{site.github.url}}/publications.html" class="site-nav">Publications</a></div>
+<div class="navlink"><a href="{{site.github.url}}/contact.html" class="site-nav">Contact</a></div>
+</div>
+
+<div class="navlink-right">
+<a href="http://www.github.com/fanli-gcb" target="_blank"><img src="assets/images/github.png" height="30px" class="media-image"></a>
+<a href="https://scholar.google.com/citations?hl=en&user=Jt0IiIcAAAAJ&view_op=list_works&sortby=pubdate" target="_blank"><img src="assets/images/google_scholar_icon.png" height="30px" class="media-image"></a>
+<a href="https://www.linkedin.com/in/fan-li-684aa316" target="_blank"><img src="assets/images/linkedin.png" height="30px" class="media-image"></a>
+</div>
+
+</nav>
